force-app/main/default/objects/Lead/fields/Achat_groupe__c.field-meta.xml
<CustomField>
    <fullName>Achat_groupe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher la case s&apos;il s&apos;agit d&apos;une campagne d&apos;achat groupé</inlineHelpText>
    <label>Achat groupé</label>
    <type>Checkbox</type>
</CustomField>