force-app/main/default/objects/Lead/fields/AE_PartenaireId__c.field-meta.xml
<CustomField>
    <fullName>AE_PartenaireId__c</fullName>
    <label>AE_PartenaireId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>