force-app/main/default/objects/Lead/fields/Annee_salon__c.field-meta.xml
<CustomField>
    <fullName>Annee_salon__c</fullName>
    <label>Année du salon</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Annee_salon</valueSetName>
    </valueSet>
</CustomField>