force-app/main/default/objects/Lead/fields/Apporteur_affaires__c.field-meta.xml
<CustomField>
    <fullName>Apporteur_affaires__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apporteur d&apos;affaires / Prescripteur</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Apporteur Affaires, Prescripteur</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>