force-app/main/default/objects/Lead/fields/Attribution_marketing__c.field-meta.xml
<CustomField>
    <fullName>Attribution_marketing__c</fullName>
    <label>Attribution marketing</label>
    <length>18</length>
    <type>Text</type>
</CustomField>