force-app/main/default/objects/Lead/fields/Batiment_a_plus_de_2_ans__c.field-meta.xml
<CustomField>
    <fullName>Batiment_a_plus_de_2_ans__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champs utilisé pour mapping avec le site web via Marketing cloud</description>
    <label>Batiment a plus de 2 ans ?</label>
    <type>Checkbox</type>
</CustomField>