force-app/main/default/objects/Lead/fields/Campagne_Google_Ads__c.field-meta.xml
<CustomField>
    <fullName>Campagne_Google_Ads__c</fullName>
    <label>Campagne Google Ads</label>
    <length>80</length>
    <type>Text</type>
</CustomField>