force-app/main/default/objects/Lead/fields/Canal_vente__c.field-meta.xml
<CustomField>
    <fullName>Canal_vente__c</fullName>
    <formula>TEXT(Owner:User.Canal_vente__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal de vente</label>
    <type>Text</type>
</CustomField>