force-app/main/default/objects/Lead/fields/Code_NAF1__c.field-meta.xml
<CustomField>
    <fullName>Code_NAF1__c</fullName>
    <formula>LEFT(ELLISPHERE__Elli_ActivityTypeAndCode__c,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code NAF</label>
    <type>Text</type>
</CustomField>