force-app/main/default/objects/Lead/fields/Commentaires__c.field-meta.xml
<CustomField>
    <fullName>Commentaires__c</fullName>
    <inlineHelpText>Les commentaires remplis par les commerciaux.</inlineHelpText>
    <label>Commentaires</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>