force-app/main/default/objects/Lead/fields/commercial_affecte__c.field-meta.xml
<CustomField>
    <fullName>commercial_affecte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial affecté</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Commercial, Profil Noureddine</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>