force-app/main/default/objects/Lead/fields/conso_energie_valeur__c.field-meta.xml
<CustomField>
    <fullName>conso_energie_valeur__c</fullName>
    <description>Champ en provenance du site internet</description>
    <label>Consommation d&apos;énergie en valeur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 10 000 € / an</fullName>
            </value>
            <value>
                <fullName>10 000 - 100 000 € / an</fullName>
            </value>
            <value>
                <fullName>100 000 - 1 000 000 € / an</fullName>
            </value>
            <value>
                <fullName>&gt; 1 000 000 € / an</fullName>
            </value>
            <value>
                <fullName>Je ne connais pas ma consommation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>