force-app/main/default/objects/Lead/fields/conso_energie_volume__c.field-meta.xml
<CustomField>
    <fullName>conso_energie_volume__c</fullName>
    <description>Champ en provenance du site internet</description>
    <label>Consommation d&apos;énergie en volume</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - 100 MWh / an</fullName>
            </value>
            <value>
                <fullName>100 - 500 MWh / an</fullName>
            </value>
            <value>
                <fullName>500 MWh - 1 GWh / an</fullName>
            </value>
            <value>
                <fullName>&gt; 1 GWh / an</fullName>
            </value>
            <value>
                <fullName>Je ne connais pas ma consommation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>