force-app/main/default/objects/Lead/fields/Date_de_la_derniere_demande__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_derniere_demande__c</fullName>
    <label>Date de la dernière demande Web</label>
    <type>Date</type>
</CustomField>