force-app/main/default/objects/Lead/fields/date_derniere_action_realisee__c.field-meta.xml
<CustomField>
    <fullName>date_derniere_action_realisee__c</fullName>
    <label>Date dernière action réalisée</label>
    <type>Date</type>
</CustomField>