force-app/main/default/objects/Lead/fields/date_fin_contrat_gaz__c.field-meta.xml
<CustomField>
    <fullName>date_fin_contrat_gaz__c</fullName>
    <description>Champ en provenance du site internet</description>
    <label>Date de fin du contrat de gaz</label>
    <type>Date</type>
</CustomField>