force-app/main/default/objects/Lead/fields/Date_Heure_soumission_formulaire__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_soumission_formulaire__c</fullName>
    <label>Date/Heure de la dernière demande Web</label>
    <type>DateTime</type>
</CustomField>