force-app/main/default/objects/Lead/fields/date_prochaine_action_planifiee__c.field-meta.xml
<CustomField>
    <fullName>date_prochaine_action_planifiee__c</fullName>
    <label>Date prochaine action planifiée</label>
    <type>Date</type>
</CustomField>