force-app/main/default/objects/Lead/fields/Date_RDV_R1__c.field-meta.xml
<CustomField>
    <fullName>Date_RDV_R1__c</fullName>
    <label>Date RDV R1</label>
    <type>DateTime</type>
</CustomField>