force-app/main/default/objects/Lead/fields/Derniere_action_realisee__c.field-meta.xml
<CustomField>
    <fullName>Derniere_action_realisee__c</fullName>
    <description>Tâche ou Event avec leur date</description>
    <label>Dernière action réalisée</label>
    <type>TextArea</type>
</CustomField>