force-app/main/default/objects/Lead/fields/Email_Apporteur_Affaire__c.field-meta.xml
<CustomField>
    <fullName>Email_Apporteur_Affaire__c</fullName>
    <description>Email pour notifier l&apos;apporteur d&apos;affaire de l&apos;avancement de sa piste</description>
    <inlineHelpText>Email pour notifier l&apos;apporteur d&apos;affaire de l&apos;avancement de sa piste</inlineHelpText>
    <label>Email Apporteur Affaire</label>
    <type>Email</type>
</CustomField>