force-app/main/default/objects/Lead/fields/Facture_devis_3__c.field-meta.xml
<CustomField>
    <fullName>Facture_devis_3__c</fullName>
    <label>Facture devis 3</label>
    <type>Url</type>
</CustomField>