force-app/main/default/objects/Lead/fields/Last_Modified_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Status_Date__c</fullName>
    <label>Last Modified Status Date</label>
    <type>Date</type>
</CustomField>