force-app/main/default/objects/Lead/fields/LastScore__c.field-meta.xml
<CustomField>
    <fullName>LastScore__c</fullName>
    <label>Score Ellisphere</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>