force-app/main/default/objects/Lead/fields/LastScoreDate__c.field-meta.xml
<CustomField>
    <fullName>LastScoreDate__c</fullName>
    <label>Dernière MAJ Score</label>
    <type>Date</type>
</CustomField>