force-app/main/default/objects/Lead/fields/Motif_hors_cible__c.field-meta.xml
<CustomField>
    <fullName>Motif_hors_cible__c</fullName>
    <label>Motif de hors cible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N&apos;est pas un professionnel</fullName>
            </value>
            <value>
                <fullName>Dialogue impossible (Langue étrangère, malentendant)</fullName>
            </value>
            <value>
                <fullName>Cessation d&apos;activité</fullName>
            </value>
            <value>
                <fullName>Retraité</fullName>
            </value>
            <value>
                <fullName>Déjà en contact avec ADE</fullName>
            </value>
            <value>
                <fullName>Activité non traitée</fullName>
            </value>
            <value>
                <fullName>Score trop faible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>