force-app/main/default/objects/Lead/fields/Motif_refus__c.field-meta.xml
<CustomField>
    <fullName>Motif_refus__c</fullName>
    <label>Motif de refus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Je ne suis pas intéressé</fullName>
            </value>
            <value>
                <fullName>Je n&apos;ai pas de temps à vous consacrer</fullName>
            </value>
            <value>
                <fullName>A déjà un courtier</fullName>
            </value>
            <value>
                <fullName>A déjà renégocié avec son fournisseur</fullName>
            </value>
            <value>
                <fullName>J&apos;ai encore le temps pour ça</fullName>
            </value>
            <value>
                <fullName>Je ne sais pas qui est le décisionnaire</fullName>
            </value>
            <value>
                <fullName>Nous passons pas les achats/C&apos;est centralisé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>