force-app/main/default/objects/Lead/fields/Nombre_appel__c.field-meta.xml
<CustomField>
    <fullName>Nombre_appel__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre d&apos;appel</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>