force-app/main/default/objects/Lead/fields/PDL_PCE__c.field-meta.xml
<CustomField>
    <fullName>PDL_PCE__c</fullName>
    <description>Cette information a été donnée par le prospect lorsqu&apos;il a rempli le comparateur sur le site alliancedesenergies.fr.
Pensez à bien vérifier avec ce dernier que l&apos;information donnée est bonne.</description>
    <label>PDL / PCE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>