force-app/main/default/objects/Lead/fields/Periode_achat_groupe__c.field-meta.xml
<CustomField>
    <fullName>Periode_achat_groupe__c</fullName>
    <label>Période achat groupé</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Achat_groupe__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Periode_achat_groupe</valueSetName>
    </valueSet>
</CustomField>