force-app/main/default/objects/Lead/fields/Prochaine_action_planifiee__c.field-meta.xml
<CustomField>
    <fullName>Prochaine_action_planifiee__c</fullName>
    <description>Task ou Event et date à venir</description>
    <label>Prochaine action planifiée</label>
    <type>TextArea</type>
</CustomField>