force-app/main/default/objects/Lead/fields/Provenance_via_le_site__c.field-meta.xml
<CustomField>
    <fullName>Provenance_via_le_site__c</fullName>
    <label>Provenance via le site</label>
    <length>55</length>
    <type>Text</type>
</CustomField>