force-app/main/default/objects/Lead/fields/Qualification_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Marketing__c</fullName>
    <description>Qualification marketing des leads issus des campagnes Emailing (Cold, Warm, Hot)</description>
    <label>Qualification Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>