force-app/main/default/objects/Lead/fields/raison_demande__c.field-meta.xml
<CustomField>
    <fullName>raison_demande__c</fullName>
    <description>Champ en provenance du site internet</description>
    <label>Raison de la demande</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Changement de fournisseur sur le site actuel</fullName>
            </value>
            <value>
                <fullName>Installation sur un nouveau site (compteur existant)</fullName>
            </value>
            <value>
                <fullName>Installation sur un nouveau site (compteur neuf)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>