force-app/main/default/objects/Lead/fields/RaisonAbandon__c.field-meta.xml
<CustomField>
    <fullName>RaisonAbandon__c</fullName>
    <label>Raison de l&apos;Abandon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absence de pouvoir décisionnel</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Délai de décision</fullName>
            </value>
            <value>
                <fullName>Échéance à plus de 24 mois</fullName>
            </value>
            <value>
                <fullName>Mauvaise note Ellisphere</fullName>
            </value>
            <value>
                <fullName>Particulier</fullName>
            </value>
            <value>
                <fullName>Pas de besoin actuel</fullName>
            </value>
            <value>
                <fullName>Pas intéressé</fullName>
            </value>
            <value>
                <fullName>Problème technique</fullName>
            </value>
            <value>
                <fullName>Service proposé ne correspond pas au besoin</fullName>
            </value>
            <value>
                <fullName>Vient de signer ailleurs</fullName>
            </value>
            <value>
                <fullName>Ne répond pas</fullName>
            </value>
            <value>
                <fullName>N&apos;a pas fait de demande</fullName>
            </value>
            <value>
                <fullName>Mauvais numéro / email</fullName>
            </value>
            <value>
                <fullName>Hors Sujet</fullName>
            </value>
            <value>
                <fullName>Doublon</fullName>
            </value>
            <value>
                <fullName>Pas convaincu par les services</fullName>
            </value>
            <value>
                <fullName>Fermeture entreprise</fullName>
            </value>
            <value>
                <fullName>Ne pas recruter</fullName>
            </value>
            <value>
                <fullName>Allergique Phoning</fullName>
                <isActive>false</isActive>
                <label>Allergique Phoning</label>
            </value>
            <value>
                <fullName>Credit Fail</fullName>
                <isActive>false</isActive>
                <label>Credit Fail</label>
            </value>
            <value>
                <fullName>Doute sur la fiabilité d&apos;Alliance des Énergies</fullName>
                <isActive>false</isActive>
                <label>Doute sur la fiabilité d&apos;Alliance des Énergies</label>
            </value>
            <value>
                <fullName>Déjà renégocié</fullName>
                <isActive>false</isActive>
                <label>Déjà renégocié</label>
            </value>
            <value>
                <fullName>EJP/Tempo</fullName>
                <isActive>false</isActive>
                <label>EJP/Tempo</label>
            </value>
            <value>
                <fullName>Non traitable</fullName>
                <isActive>false</isActive>
                <label>Non traitable</label>
            </value>
            <value>
                <fullName>Travaille déjà avec un courtier</fullName>
                <isActive>false</isActive>
                <label>Travaille déjà avec un courtier</label>
            </value>
            <value>
                <fullName>Zone non desservie</fullName>
                <isActive>false</isActive>
                <label>Zone non desservie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>