force-app/main/default/objects/Lead/fields/Responsable_achat_groupe__c.field-meta.xml
<CustomField>
    <fullName>Responsable_achat_groupe__c</fullName>
    <label>Responsable de l&apos;achat groupé</label>
    <length>18</length>
    <type>Text</type>
</CustomField>