force-app/main/default/objects/Lead/fields/Role_du_proprietaire__c.field-meta.xml
<CustomField>
    <fullName>Role_du_proprietaire__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role du propriétaire</label>
    <type>Text</type>
</CustomField>