force-app/main/default/objects/Lead/fields/Secteur__c.field-meta.xml
<CustomField>
    <fullName>Secteur__c</fullName>
    <description>Champs utilisé pour mapping avec le site web via Marketing cloud</description>
    <label>Secteur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>