force-app/main/default/objects/Lead/fields/Service_Liste_Prescripteur__c.field-meta.xml
<CustomField>
    <fullName>Service_Liste_Prescripteur__c</fullName>
    <label>Service Liste Prescripteur</label>
    <length>80</length>
    <type>Text</type>
</CustomField>