force-app/main/default/objects/Lead/fields/Source_cellule_RDV__c.field-meta.xml
<CustomField>
    <fullName>Source_cellule_RDV__c</fullName>
    <label>Source cellule RDV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ellisphere - Import 19/03/2025 Alimentaire</fullName>
            </value>
            <value>
                <fullName>Ellisphere - Import 19/03/2025 Industrie</fullName>
            </value>
            <value>
                <fullName>Emailing</fullName>
            </value>
            <value>
                <fullName>Fichier</fullName>
            </value>
            <value>
                <fullName>Partenaire</fullName>
            </value>
            <value>
                <fullName>PEP&apos;S</fullName>
            </value>
            <value>
                <fullName>Prescripteur</fullName>
            </value>
            <value>
                <fullName>Prospection téléphonique</fullName>
            </value>
            <value>
                <fullName>Prospection téléphonique - Hors fichier</fullName>
            </value>
            <value>
                <fullName>Prospection terrain</fullName>
            </value>
            <value>
                <fullName>Recherche internet</fullName>
            </value>
            <value>
                <fullName>Réseau personnel</fullName>
            </value>
            <value>
                <fullName>Sparklane</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>