force-app/main/default/objects/Lead/fields/Statut_appel__c.field-meta.xml
<CustomField>
    <fullName>Statut_appel__c</fullName>
    <label>Statut de l&apos;appel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pas d&apos;appel émis</fullName>
            </value>
            <value>
                <fullName>Répond</fullName>
            </value>
            <value>
                <fullName>Répondeur</fullName>
            </value>
            <value>
                <fullName>NRPP</fullName>
            </value>
            <value>
                <fullName>Faux numéro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>