force-app/main/default/objects/Lead/fields/StatutJuridique__c.field-meta.xml
<CustomField>
    <fullName>StatutJuridique__c</fullName>
    <label>Forme juridique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EARL</fullName>
            </value>
            <value>
                <fullName>EI</fullName>
            </value>
            <value>
                <fullName>EIRL</fullName>
            </value>
            <value>
                <fullName>EURL</fullName>
            </value>
            <value>
                <fullName>GAEC</fullName>
            </value>
            <value>
                <fullName>GEIE</fullName>
            </value>
            <value>
                <fullName>GIE</fullName>
            </value>
            <value>
                <fullName>SARL</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SAS</fullName>
            </value>
            <value>
                <fullName>SASU</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SCA</fullName>
            </value>
            <value>
                <fullName>SCI</fullName>
            </value>
            <value>
                <fullName>SCIC</fullName>
            </value>
            <value>
                <fullName>SCM</fullName>
            </value>
            <value>
                <fullName>SCOP</fullName>
            </value>
            <value>
                <fullName>SCP</fullName>
            </value>
            <value>
                <fullName>SCS</fullName>
            </value>
            <value>
                <fullName>SEL</fullName>
            </value>
            <value>
                <fullName>SELAFA</fullName>
            </value>
            <value>
                <fullName>SELARL</fullName>
            </value>
            <value>
                <fullName>SELAS</fullName>
            </value>
            <value>
                <fullName>SELCA</fullName>
            </value>
            <value>
                <fullName>SEM</fullName>
            </value>
            <value>
                <fullName>SEML</fullName>
            </value>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>SICA</fullName>
            </value>
            <value>
                <fullName>SNC</fullName>
            </value>
            <value>
                <fullName>Association non déclarée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>