force-app/main/default/objects/Lead/fields/TEC_piste_jamais_chang__c.field-meta.xml
<CustomField>
    <fullName>TEC_piste_jamais_chang__c</fullName>
    <description>Champ pour voir les pistes qui n&apos;ont jamais été changé</description>
    <formula>CreatedDate = LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH piste jamais changé</label>
    <type>Checkbox</type>
</CustomField>