force-app/main/default/objects/Lead/fields/TECH_AA_Name__c.field-meta.xml
<CustomField>
    <fullName>TECH_AA_Name__c</fullName>
    <description>Récupère le nom du compte Apporteur Affaire / Prescripteur pour les sharing rules</description>
    <label>TECH AA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>