force-app/main/default/objects/Lead/fields/TECH_BuisnessDaysElapsed__c.field-meta.xml
<CustomField>
    <fullName>TECH_BuisnessDaysElapsed__c</fullName>
    <description>Nombre de jour ouvré passés depuis la création de la piste</description>
    <formula>(5 * ( FLOOR( ( DATEVALUE(NOW()) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(NOW()) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(
DATEVALUE(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_BuisnessDaysElapsed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>