force-app/main/default/objects/Lead/fields/TECH_Date_1er_RDVPris__c.field-meta.xml
<CustomField>
    <fullName>TECH_Date_1er_RDVPris__c</fullName>
    <label>Date de la prise du premier RDV</label>
    <type>DateTime</type>
</CustomField>