force-app/main/default/objects/Lead/fields/TECH_DoNotReassign__c.field-meta.xml
<CustomField>
    <fullName>TECH_DoNotReassign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si le champs est à True le flow Réattribution des leads demande de contact site ne s&apos;exécute pas</description>
    <label>TECH_DoNotReassign</label>
    <type>Checkbox</type>
</CustomField>