force-app/main/default/objects/Lead/fields/TECH_Lead_reattribue_apres_48H__c.field-meta.xml
<CustomField>
    <fullName>TECH_Lead_reattribue_apres_48H__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead réattribué après 48H</label>
    <type>Checkbox</type>
</CustomField>