force-app/main/default/objects/Lead/fields/Titre_page_origine__c.field-meta.xml
<CustomField>
    <fullName>Titre_page_origine__c</fullName>
    <label>Titre de la page d&apos;origine</label>
    <type>TextArea</type>
</CustomField>