force-app/main/default/objects/Lead/fields/Titre_SEO_page_origine__c.field-meta.xml
<CustomField>
    <fullName>Titre_SEO_page_origine__c</fullName>
    <label>Titre SEO de la page d&apos;origine</label>
    <type>TextArea</type>
</CustomField>