force-app/main/default/objects/Lead/fields/transition_energetique__c.field-meta.xml
<CustomField>
    <fullName>transition_energetique__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le prospect a indiqué être intéressé par la transition énergétique lorsqu&apos;il a complété un formulaire sur le site alliancedesenergies.fr</description>
    <label>Intéressé par transition énergétique ?</label>
    <type>Checkbox</type>
</CustomField>