force-app/main/default/objects/Lead/fields/type_energie__c.field-meta.xml
<CustomField>
    <fullName>type_energie__c</fullName>
    <description>Champ en provenance du site internet</description>
    <label>Type d&apos;énergie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Électricité</fullName>
            </value>
            <value>
                <fullName>Gaz</fullName>
            </value>
            <value>
                <fullName>Électricité + Gaz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>