force-app/main/default/objects/Lead/fields/Type_formulaire__c.field-meta.xml
<CustomField>
    <fullName>Type_formulaire__c</fullName>
    <label>Type de formulaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>