force-app/main/default/objects/Lead/fields/Type_offre_selectionnee__c.field-meta.xml
<CustomField>
    <fullName>Type_offre_selectionnee__c</fullName>
    <description>Champs utilisé pour mapping avec le site web via Marketing cloud</description>
    <label>Type offre selectionnée</label>
    <length>120</length>
    <type>Text</type>
</CustomField>