force-app/main/default/objects/Lead/fields/Type_rappel__c.field-meta.xml
<CustomField>
    <fullName>Type_rappel__c</fullName>
    <label>Type de rappel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rappel auto</fullName>
            </value>
            <value>
                <fullName>Rappel perso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>